--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "keywords": [],
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
