--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1"
